<resources>
    <!-- main -->
    <string name="app_name">MedTracker</string>
    <string name="add_med">Add Medication</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>

    <!-- add_med -->
    <string name="add_title">Add Medication</string>
    <string name="image_text">Image</string>
    <string name="name_text">Name</string>
    <string name="name_input">Enter Medication Name</string>
    <string name="dosage_text1">Doses</string>
    <string name="dosage_input">num</string>
    <string name="dosage_text2">pills/bottles</string>
    <string name="deadline_title">Eat Before</string>
    <string name="notification_text">Notification</string>
    <string name="notification_input">Choose notify time</string>
    <string name="remarks_text">Remarks</string>
    <string name="create_med">Create Medication</string>
    <string name="eat_before_date">Date</string>
    <string name="eat_before_time">Time</string>
    <string name="repetition_text">Repeat</string>

    <!-- setting -->
    <string name="info_toolbar">Setting</string>
    <!-- caretaker -->
    <string name="caretaker">Caretaker</string>
    <string name="caretaker_info">No Current Caretaker</string>
    <!-- personal info -->
    <string name="personal_info_title">Personal Info</string>
    <string name="name_title">Name</string>
    <string name="age_title">Age</string>
    <string name="gender_title">Gender</string>
    <string name="name_enter">Your Name</string>
    <string name="age_enter">Your Age</string>
    <string name="gender_enter">Your Gender</string>
    <!-- account info -->
    <string name="account_title">Account Info</string>
    <string name="username_title">UserName</string>
    <string name="username_enter">Your Username</string>
    <string name="password_title">Password</string>
    <string name="password_enter">********</string>
    <!-- history -->
    <string name="history_title">History</string>
    <string name="med_title">My Medication History\u0020\u0020\u0020\u0020\u0020\u0020\u0020>></string>
    <!-- buttons -->
    <string name="logout_button">Logout</string>
    <string name="switch_acc_button">Switch Account</string>
    <string name="change">Change</string>

    <!-- Patient UI -->
    <string name="Age">Age</string>
    <string name="Medications">Medications</string>
    <string name="Create">Create</string>


</resources>