<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".controller.setting">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_200"
            android:elevation="30dp"
            android:gravity="center"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/info_toolbar"
            app:titleMarginStart="170dp"
            app:titleTextColor="#000000" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#010101" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="595dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:text="@string/caretaker"
                    android:textColor="#000000" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="77dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="93dp"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        app:srcCompat="@drawable/caretaker" />

                    <TextView
                        android:id="@+id/textView23"
                        android:layout_width="316dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:background="@color/teal_200"
                        android:text="@string/caretaker_info"
                        android:textColor="#000000" />
                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="46dp"
                    android:text="@string/personal_info_title"
                    android:textColor="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/name_title"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/name_enter"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/button"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/change" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView15"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/age_title"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textView16"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/age_enter"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/change" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/gender_title"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/gender_enter"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/change" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="29dp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/account_title"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView20"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/username_title"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textView21"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/username_enter"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/change" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView18"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/password_title"
                        android:textColor="#000000" />

                    <TextView
                        android:id="@+id/textView17"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/password_enter"
                        android:textColor="#000000" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="@color/purple_500"
                        android:text="@string/change" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="27dp" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="39dp"
                    android:text="@string/history_title"
                    android:textColor="#000000" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView22"
                        android:layout_width="wrap_content"
                        android:layout_height="33dp"
                        android:layout_weight="1"
                        android:text="@string/med_title"
                        android:textColor="#000000"
                        android:backgroundTint="@color/purple_500" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="82dp"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/right_arrow" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="38dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FFFFFF"
                    android:backgroundTintMode="src_over"
                    android:text="@string/switch_acc_button"
                    android:textColor="#292929" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:backgroundTintMode="src_over"
                    android:text="@string/logout_button"
                    android:textColor="#FF0000" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="10dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/homeImage"
                android:layout_width="206dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@color/teal_200"
                android:elevation="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/home" />

            <ImageButton
                android:id="@+id/settingImage"
                android:layout_width="206dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@color/teal_200"
                android:elevation="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/account" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>