<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:elevation="20dp"
    tools:context=".controller.addMed">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="151dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="6dp"
                android:contentDescription="back button"
                app:srcCompat="?attr/homeAsUpIndicator" />

            <TextView
                android:id="@+id/add_med_title"
                android:layout_width="284dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/add_med"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#010101" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="500dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_marginLeft="40dp"
                        android:gravity="center"
                        android:text="@string/image_text"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="78dp"
                        android:layout_height="60dp"
                        android:layout_marginStart="50dp"
                        app:srcCompat="@drawable/photo" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="40dp"
                        android:gravity="center"
                        android:text="@string/name_text"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="235dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="50dp"
                        android:backgroundTint="@color/hint"
                        android:ems="10"
                        android:hint="@string/name_input"
                        android:inputType="textPersonName"
                        android:textColor="#000000"
                        android:textColorHint="#8E8E8E" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="40dp"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/dosage_text1"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextNumber"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:backgroundTint="@color/hint"
                        android:ems="10"
                        android:hint="@string/dosage_input"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="73dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/dosage_text2"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView200"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="40dp"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/deadline_title"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/r"
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="40dp"
                        android:backgroundTint="@color/hint"
                        android:ems="10"
                        android:hint="@string/dosage_input1"
                        android:inputType="number"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/textView6asdf"
                        android:layout_width="73dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center"
                        android:text="@string/dosage_text2"
                        android:textColor="#000000"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/editTextTiasdfme"
                        android:layout_width="112dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:backgroundTint="@color/hint"
                        android:ems="10"
                        android:hint="@string/dosage_input2"
                        android:inputType="time"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint"
                        tools:ignore="TouchTargetSizeCheck" />
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="40dp"
                        android:gravity="center"
                        android:text="@string/notification_text"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextTime2"
                        android:layout_width="131dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:backgroundTint="@color/hint"
                        android:ems="10"
                        android:hint="@string/notification_input"
                        android:inputType="time"
                        android:textColor="#000000"
                        android:textColorHint="@color/hint"
                        tools:ignore="TouchTargetSizeCheck" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="103dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/notification_text2"
                        android:textColor="#000000"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="40dp"
                        android:gravity="center"
                        android:text="@string/remarks_text"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/editTextTextMultiLine"
                        android:layout_width="327dp"
                        android:layout_height="174dp"
                        android:layout_marginLeft="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/edittext_attribute"
                        android:backgroundTint="@color/hint"
                        android:ems="10"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:textColor="#000000" />

                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="54dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/createMed"
                android:layout_width="207dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/purple_500"
                android:elevation="20dp"
                android:gravity="center|center_horizontal"
                android:text="@string/create_med" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>